<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Weather App</string>
    <string name="action_settings">Settings</string>
    <string name="weather_category">weather</string>
    <string name="location">location</string>
    <string name="temperature">temperature</string>
    <string name="setting_button_text">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">Settings</string>
    <string name="select_number_of_day_text">Number of Days to Display</string>
    <string name="days"> days</string>
    <string name="save_changes_button_text">Save Changes</string>
    <string name="number_of_days_to_display_edittext_hint">eg. 3   </string>
    <string name="celsius_radio_button_text">celsius</string>
    <string name="zip_code_hint">eg. 22180</string>
    <string name="zip_code">zip code</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="radio_use_current_location">Use current location</string>
    <string name="radio_input_a_zip_code">input a zip code</string>
    <string name="metric_system_text">Metric System</string>
    <string name="title_activity_second_settings">SecondSettingsActivity</string>
    <string name="progress_loading_location_data">Accessing Location Information</string>
    <string name="preference_title_number_of_days">Number of Days</string>
    <string name="preference_description_set_number_of_days">Set the number of days of weather you want to display</string>
    <string name="preference_key_number_of_days">numberOfDays</string>
    <string name="preference_title_metric">Metric</string>
    <string name="preference_summary_metric">Select the metric system to be used</string>
    <string name="preference_key_metric">metricUnit</string>
    <string name="preference_title_location">Location</string>
    <string name="preference_summary_location">Enter a zip code or leave it blank to use your current location</string>
    <string name="preference_key_location">location</string>
    <string name="preference_location_default_value"></string>
    <string name="progress_loading_weather_data">Please wait while we access the weather data</string>
    <string name="preference_metric_unit_default_fahrenheit_text">Fahrenheit</string>
    <string name="weather_data_failed_to_load_toast">Weather data failed to load! This might be caused by either lack of internet access or a invalid zipcode</string>
    <string name="weather_data_loaded_toast">Weather data updated!</string>
    <string name="location_detection_no_permission_exception">Cannot access location data due to lack of permission</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_message">The app will now request access to your location</string>
    <string name="location_not_found_time_out_toast">Connection timed out.Cannot get current location. Please specify a zip code in settings</string>
    <string name="preference_number_of_days_default_value">3</string>
</resources>
