<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="@string/preference_title_number_of_days"
        android:summary="@string/preference_description_set_number_of_days"
        android:key="@string/preference_key_number_of_days"
        android:entryValues="@array/numberOfDays"
        android:entries="@array/numberOfDays"
        android:defaultValue="@string/preference_number_of_days_default_value"/>
    <ListPreference
        android:title="@string/preference_title_metric"
        android:summary="@string/preference_summary_metric"
        android:key="@string/preference_key_metric"
        android:entryValues="@array/metricEntriesValues"
        android:entries="@array/metricEntries"
        android:defaultValue="@string/preference_metric_unit_default_fahrenheit_text"/>
    <EditTextPreference
        android:title="@string/preference_title_location"
        android:summary="@string/preference_summary_location"
        android:key="@string/preference_key_location"
        android:defaultValue="@string/preference_location_default_value">
    </EditTextPreference>
</PreferenceScreen>