<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myapps.weatherapp.Acticities.SettingsActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView android:text="@string/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25sp"/>
    <TextView
        android:text="@string/select_number_of_day_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="25sp">
        <EditText
            android:id="@+id/number_of_days_to_display"
            android:hint="@string/number_of_days_to_display_edittext_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/metric_system_text"
        android:textSize="20sp"/>
    <RadioGroup
        android:id="@+id/radio_metric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:layout_marginBottom="25sp">

        <RadioButton
            android:id="@+id/radio_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fahrenheit"
            android:checked="true"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/radio_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_radio_button_text"
            android:textSize="20sp"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textSize="20sp"
        android:layout_gravity="left"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_use_current_location"
            android:id="@+id/radio_use_current_location"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_input_a_zip_code"
            android:id="@+id/input_a_zip_code"
            android:textSize="20sp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zip_code"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingRight="10sp"/>
        <EditText
            android:id="@+id/zip_code_edittext"
            android:hint="@string/zip_code_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:text="@string/save_changes_button_text"
            android:id="@+id/save_changes_button"
            android:layout_marginRight="30sp"/>
        <Button
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:id="@+id/cancel_button" />
    </LinearLayout>

</LinearLayout>
